apagando uma tradução

--- a/public/locales/en-GB.json
+++ b/public/locales/en-GB.json
@@ -2,6 +2,5 @@
     "greeting": "Hello! How are you",
     "color": "Colour",
     "favorite": "My favourite colour is blue",
-    "a": "GB - Text 1 - Edição Weblate",
-    "b": "GB - Text 2 - Edição Weblate"
+    "a": "GB - Text 1 - Edição Weblate"
 }
